--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -17,7 +17,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Five Thousand Dice</a>
+                    <a class="navbar-brand" href="/">Five Thousand Dice</a>
                     <a class="navbar-brand" href="rules">Rules</a>
                     <a class="navbar-brand" href="game">Play Game</a>
                 </div>
